--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -49,60 +49,70 @@ If you would like to attach a label after creating a new device or integration,
 go to the specific device or integration details page and find the label
 attachment dropdown to apply.
 
-
 ## Labels Settings
 
-Users can managed per-label settings across using the **Label Settings** button in the top right corner when viewing an individual label. Only users with administrator-level privileges can change label settings. 
-
+Users can managed per-label settings across using the **Label Settings** button
+in the top right corner when viewing an individual label. Only users with
+administrator-level privileges can change label settings.
 
 <img src={useBaseUrl("img/use-the-network/console/label-settings.png")} />
 
+### General
 
-### General 
+Under **General** settings, configured a label's name and its color as it
+appears on the left side of Dashboard.
 
-Under **General** settings, configured a label's name and its color as it appears on the left side of Dashboard. 
+### Packet
 
-### Packet 
-
-Configure the **Packet** settings to adjust how many copies of each packet you want to receive. By default, the Network will deliver the packet with the best signal strength, and for most applications this is probably adequate. However, for purposes of redundancy or location analysis, users might want to request more than one distinct packet from Hotspots when available.  
+Configure the **Packet** settings to adjust how many copies of each packet you
+want to receive. By default, the Network will deliver the packet with the best
+signal strength, and for most applications this is probably adequate. However,
+for purposes of redundancy or location analysis, users might want to request
+more than one distinct packet from Hotspots when available.
 
 :::important
 
-Each additional packet requested will result in additional data credit fees paid to the Network by your Helium Console organization. 
+Each additional packet requested will result in additional data credit fees paid
+to the Network by your Helium Console organization.
 
 :::
 
-
-<img src={useBaseUrl("img/use-the-network/console/labels-packet-settings.png")} />
-
+<img
+  src={useBaseUrl("img/use-the-network/console/labels-packet-settings.png")}
+/>
 
 ### Notifications
 
-Helium Console will deliver email-based notifications for various events that happen for devices in a given label. For each notification, either `Administrators`, `Managers`, or both can be notified via email. The current list of supported notifications are
+Helium Console will deliver email-based notifications for various events that
+happen for devices in a given label. For each notification, either
+`Administrators`, `Managers`, or both can be notified via email. The current
+list of supported notifications are
 
-* When a device is deleted from an organization
-* When an integration containing devices has been deleted
-* When an integration with devices has been updated
+- When a device is deleted from an organization
+- When an integration containing devices has been deleted
+- When an integration with devices has been updated
 
-<img src={useBaseUrl("img/use-the-network/console/labels-notification-settings.png")} />
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/labels-notification-settings.png"
+  )}
+/>
 
 ### Adaptive Data Rate
 
-To allow ADR for one device or a group of devices, simply toggle the `Allow ADR` in your Label settings. You can
-either create a Label strictly for managing ADR, or adjust the setting on a Label you already have attached to your devices. 
+To allow ADR for one device or a group of devices, simply toggle the `Allow ADR`
+in your Label settings. You can either create a Label strictly for managing ADR,
+or adjust the setting on a Label you already have attached to your devices.
 
 :::info
 
-You can read complete documentation on Helium's ADR implementation [here](/use-the-network/console/adr).
+You can read complete documentation on Helium's ADR implementation
+[here](/use-the-network/console/adr).
 
 :::
-
 
 <img
   src={useBaseUrl(
     "img/use-the-network/console/console-adr-label-settings-adr.png"
   )}
 />
-
-
-
