--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 Adaptive Data Rate or ADR is a mechanism for adapting the data rate of devices
 in a LoRaWAN network. This allows a device's airtime and power consumption to be
 optimized by the Network Server. Learn more about ADR from Semtech's developer
-portal here.
+portal [here](https://lora-developers.semtech.com/library/tech-papers-and-guides/understanding-adr/).
 
 :::warning
 - ADR will only work if your device requests ADR.
@@ -25,13 +25,13 @@ portal here.
 
 The network server behind Console implements a specific algorithm for
 determining the optimal data rate and transmit power to send down to the device.
-ADR only increases the device's data rate, but it increases or decreases
+ADR not only increases the device's data rate, but it increases or decreases
 transmit power as needed. The network only calculates data-rate/power
 corrections after it collects 20 contiguous uplink packets with the ADR bit set
-to 1. From this point on, the network may send downlink LinkADRReq MAC commands,
+to `1`. From this point on, the network may send downlink LinkADRReq MAC commands,
 either alone or with already-scheduled downlink packets. The network server
 clears its ADR history whenever a device sends an uplink packet with ADR set
-to 0.
+to `0`.
 
 ## Allowing ADR in Console
 
