add label settings link in adr doc

--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -35,7 +35,7 @@ to `0`.
 
 ## Allowing ADR in Console
 
-ADR is managed via Label settings in Console. To allow ADR for one device or a
+ADR is managed via [Label settings in Console](./labels#labels-settings). To allow ADR for one device or a
 group of devices, simply toggle the Allow ADR in your Label settings. You can
 either create a Label strictly for managing ADR, or adjust the setting on a
 Label you already have attached to your devices. To change the settings for a
