--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -12,13 +12,16 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 Adaptive Data Rate or ADR is a mechanism for adapting the data rate of devices
 in a LoRaWAN network. This allows a device's airtime and power consumption to be
 optimized by the Network Server. Learn more about ADR from Semtech's developer
-portal [here](https://lora-developers.semtech.com/library/tech-papers-and-guides/understanding-adr/).
+portal
+[here](https://lora-developers.semtech.com/library/tech-papers-and-guides/understanding-adr/).
 
 :::warning
+
 - ADR will only work if your device requests ADR.
 - Using ADR is only suggested for devices that are static for long periods of
   times. ADR is not suggested for devices that are constantly changing location
   or have unstable RF conditions. 
+  
 :::
 
 ## ADR Algorithm
@@ -28,19 +31,19 @@ determining the optimal data rate and transmit power to send down to the device.
 ADR not only increases the device's data rate, but it increases or decreases
 transmit power as needed. The network only calculates data-rate/power
 corrections after it collects 20 contiguous uplink packets with the ADR bit set
-to `1`. From this point on, the network may send downlink LinkADRReq MAC commands,
-either alone or with already-scheduled downlink packets. The network server
-clears its ADR history whenever a device sends an uplink packet with ADR set
-to `0`.
+to `1`. From this point on, the network may send downlink LinkADRReq MAC
+commands, either alone or with already-scheduled downlink packets. The network
+server clears its ADR history whenever a device sends an uplink packet with ADR
+set to `0`.
 
 ## Allowing ADR in Console
 
-ADR is managed via [Label settings in Console](./labels#labels-settings). To allow ADR for one device or a
-group of devices, simply toggle the Allow ADR in your Label settings. You can
-either create a Label strictly for managing ADR, or adjust the setting on a
-Label you already have attached to your devices. To change the settings for a
-label, navigate to the Label management page and click Label Settings as shown
-below.
+ADR is managed via [Label settings in Console](./labels#labels-settings). To
+allow ADR for one device or a group of devices, simply toggle the Allow ADR in
+your Label settings. You can either create a Label strictly for managing ADR, or
+adjust the setting on a Label you already have attached to your devices. To
+change the settings for a label, navigate to the Label management page and click
+Label Settings as shown below.
 
 <img
   src={useBaseUrl("img/use-the-network/console/console-adr-label-settings.png")}
