cleaning up all developer.helium links

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -91,7 +91,7 @@ the following reward types:
 In the above table you can see the maximum allotted rewards per reward type in
 accordance with HIP 10 (described below). If you want to see the current reward
 type percentage, you can always query the
-[Chain Variables API](https://developer.helium.com/blockchain/api/chain-variables).
+[Chain Variables API](/api/blockchain/chain-variables).
 The next maximum allotted rewards change is currently scheduled for **August
 1, 2021.**
 
