--- a/docs/use-the-network/console/integrations/aws-iot-core.mdx
+++ b/docs/use-the-network/console/integrations/aws-iot-core.mdx
@@ -110,7 +110,7 @@ named identifiers, that can be used to associate an integration with a device.
 To connect one or more devices to one or more integrations, simply attach the
 same label to both the device and integration. Labels need to be created before
 attaching them to devices and integrations. You can read more about how to do
-that [here](https://developer.helium.com/console/labels).
+that [here](/use-the-network/console/labels).
 
 ## AWS IoT MQTT Topic composition:
 
