--- a/docs/use-the-network/console/integrations/http.mdx
+++ b/docs/use-the-network/console/integrations/http.mdx
@@ -118,7 +118,7 @@ find it using the Debug window on your device page.
 
 To send the downlink message, make a POST request including a JSON body with the
 following fields shown below, see more details on the fields
-[here](https://developer.helium.com/console/integrations/json-schema#downlink-transmitting-data-to-a-device).
+[here](/use-the-network/console/integrations/json-schema#downlink-transmitting-data-to-a-device).
 
 #### Downlink JSON Message Example
 
@@ -193,4 +193,4 @@ named identifiers, that can be used to associate an integration with a device.
 To connect one or more devices to one or more integrations, simply attach the
 same label to both the device and integration. Labels need to be created before
 attaching them to devices and integrations. You can read more about how to do
-that [here](https://developer.helium.com/console/labels).
+that [here](/use-the-network/console/labels).
