--- a/docs/use-the-network/console/migrating-devices/ttn-manual.mdx
+++ b/docs/use-the-network/console/migrating-devices/ttn-manual.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 This short guide will walk you through porting your devices to the Helium
 Network \(and Helium Console\) from TTN and the TTN Console. If you are doing
 more than a few devices though, you may want to try the
-[Command-Line Interface for automated import](https://developer.helium.com/console/cli#ttn-import).
+[Command-Line Interface for automated import](/use-the-network/console/cli#ttn-import).
 
 At a high level, there are two steps to accomplish this migration:
 
