--- a/docs/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps.mdx
+++ b/docs/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps.mdx
@@ -112,7 +112,7 @@ The Oyster/Yabby ship with a pre-provisioned AppEUI and AppKey. If you choose to
 use these credentials, you can leave the AppEUI and AppKey fields blank in the
 Windows utility. If you’d like to provision the device with new credentials, you
 must copy the AppEUI and AppKey from the device
-[created ](https://developer.helium.com/console/adding-devices)in Console.
+[created in Console](/use-the-network/console/adding-devices).
 
 The basic parameters of interest are as follows:
 
@@ -218,8 +218,12 @@ projects.
 
 To learn more about myDevices Cayenne integration, visit myDevices Cayenne
 
-:::info myDevices currently only includes the Digital Matter Oyster in their
-device library. :::
+:::info 
+
+myDevices currently only includes the Digital Matter Oyster in their
+device library. 
+
+:::
 
 When you are adding a device/widget in Cayenne, look for the **Digital Matter
 Oyster** under **Helium.**
