Added  project "Helium Network GPS Tracking Directly In Google Sheets"

--- a/docs/use-the-network/community-projects/community-projects.mdx
+++ b/docs/use-the-network/community-projects/community-projects.mdx
@@ -244,6 +244,14 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
   src="https://www.hackster.io/ashokr/helium-lora-mapper-12221d/embed"
   width="350"
 ></iframe>
+&nbsp;&nbsp;&nbsp;
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/abouhatab/helium-network-gps-tracking-directly-in-google-sheets-f77378/embed"
+  width="350"
+></iframe>
 
 
 
