--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 <div class="container" style={{padding: 0}}>
 	<div class="row">
 		<div class="col col--4">
-			<h1>Welcome to Helium</h1>
+			<h1>Welcome to Test Helium</h1>
 			<h2 className="subtitle">Explore our guides and examples to build and use the Helium Network.</h2>
 			<a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a>
 			<div>
