add adafruitio with feather m0 guide

--- a/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95.mdx
+++ b/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/adafruit-feather-m0-rfm95.mdx
@@ -27,3 +27,7 @@ The Adafruit Feather M0 RFM95 is Adafruit's popular ATSAMD21G18(ARM Cortex M0) b
 ### Firmware Quickstart Guides
 
 [Arduino Guide](/use-the-network/devices/development/adafruit-feather-m0-rfm95/arduino)
+
+### Complete Integration Guides
+
+[Adafruit IO Guide](/use-the-network/devices/development/adafruit-feather-m0-rfm95/adafruitio)
