--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -1,40 +1,24 @@
 ---
 id: mine-hnt
 hide_title: true
-sidebar_label: What is a Helium Miner?
+sidebar_label: Introduction
 slug: /mine-hnt
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# What is a Helium Miner?
+# Mine HNT
 
-Every Miner on the Helium Blockchain is first and foremost a LoRaWAN coverage
-provider. A Miner provides long-range wireless coverage for very low power and
-inexpensive IoT devices.
+Any Helium-enabled Hotspot (sometimes called a **miner** or **gateway**) can mine $HNT. Helium Hotspots were originally built by Helium, Inc. and our now handled by our growing ecosystem of approved manufacturers.
 
-Therefore, a Miner boils down to two principle components:
+### Hotspot Makers 
 
-- a LoRaWAN gateway
-- [the Miner Client](https://github.com/helium/miner)
+Interested in becoming a **Hotspots Maker**? Any qualified company can be approved by the Helium community to manufacture and distribute Hotspots. [Learn more about the process and requirements here](/mine-hnt/hotspot-makers).
 
-<img src={useBaseUrl("img/mine-hnt/mine-hnt-arch.png")} />
+### Approved Hotspots 
 
-Every LoRaWAN gateway provides some "packet forwarder" application which is how
-the Miner sends and receives radio packets. In turn, the Miner uses libp2p over
-some standard Internet to communicate with other Miners and with Helium Network
-Servers (ie: the servers that "own" the devices on the network).
+A full list of approved Hotspots with details on how to acquire them [can be found here](https://www.helium.com/mine).
 
-The mechanics of mining and earnings on the Network are more fully covered in
-[other sections](blockchain/mining). This section focuses on practical hardware
-and software requirements for operating a Miner.
+### Build a Helium Packet Forwarder
 
-We will cover everything from [prebuilt Hotspots](mine-hnt/prebuilt-hotspots),
-generic LoRaWAN gateways which require running your own Miner, to building your
-own gateway using a Raspberry Pi.
-
-**Note**: The ability to mine HNT with anything other than prebuilt Hotspots is
-currently under development following the conclusion of the DIY Alpha program.
-Please join the Helium Discord Server and the #hotspot-diy-hardware channel for
-the latest updates on the roadmap here. To be a Helium Miner, there are three
-principle components to know about
+As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWNAN Gateway can converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
