--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -62,14 +62,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    <div class="col col--6 " style={{marginBottom: 100}}>
 	   		<img className="homeicon" src={useBaseUrl("img/home/mineicon.png")} />
 	    	<h3>Mine $HNT</h3>
-	    	<p className="podtext">Miners create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
+	    	<p className="podtext">Hotspots create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
 	    	<a href="/mine-hnt">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    	<h5>Quick Links</h5>
 	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> What is a Helium Miner?</a>
-	    	<a className="block" href="/mine-hnt/prebuilt-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Prebuilt Hotspots</a>
-	    	<a className="block" href="/mine-hnt/build-a-hotspot"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Hotspot</a>
-	    	<a className="block" href="/mine-hnt/convert-lorawan-gateway"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Convert a LoRaWAN Gateway</a>
-	    	<a className="block" href="/mine-hnt/run-a-miner"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Miner</a>
+	    	<a className="block" href="https://helium.com/mine"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Approved Hotspots</a>
+	    	<a className="block" href="/mine-hnt/hotspot-makers"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Hotspot Makers</a>
+			<a className="block" href="/mine-hnt/build-a-packet-forwarder"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Packet Forwarder</a>
 	    </div>
 	    <div class="col col--6 "  style={{marginBottom: 100}}>
 		    <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
