--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -18,7 +18,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<div>
 				<a href="/blockchain"><span class="badge badge--secondary">Developers</span></a>
 				<a href="/mine-hnt"><span class="badge badge--secondary">Miners</span></a>
-				<a href="/community-governance"><span class="badge badge--secondary">Supporters</span></a>
+				<a href="/community-governance"><span class="badge badge--secondary">Community</span></a>
 			</div>
 		</div>
 		<div class="col col--8">
@@ -73,7 +73,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    <div class="col col--6 "  style={{marginBottom: 100}}>
 		    <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
 		    <h3>Use the Helium Network</h3>
-		    <p className="podtext">The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations and robust developer tools.</p>
+		    <p className="podtext">The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations, and robust developer tools.</p>
 		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 		    <h5>Quick Links</h5>
 		    <a className="block" href="/use-the-network/devices/ready-to-use"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use Devices</a>
