--- a/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/adafruitio.mdx
+++ b/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/adafruitio.mdx
@@ -25,11 +25,11 @@ device.
 
 ## Objective and Requirements
 
-In this guide, you will learn:
+In this guide, you will learn how to:
 
-* How to connect your hardware
+* Connect your hardware
 * Setup your firmware environment
-* How to program a basic application that will send packets over the Helium Network
+* Program a basic application that will send packets over the Helium Network
 * Verify real-time packets sent to the Helium Console via Hotspot that's in range
 * Create an AdafruitIO integration and attach to device
 
@@ -65,7 +65,7 @@ Please visit Adafruit's Documentation for antenna options and instructions [here
 
 ### Jumping IO1 to Pin6
 
-In order to use the RFM95 radio module onboard the Feather M0 for LoRaWAN we'll need to connect two pins together.  The pins are labeled io1 and 6 on the board, as shown below. If you have the headers soldered on, you can use a female to female jumper cable to connect them, or you can simply solder a wire from pin to pin.
+In order to use the RFM95 radio module onboard the Feather M0 for LoRaWAN we'll need to connect two pins together.  The pins are labeled `io1` and `6` on the board, as shown below. If you have the headers soldered on, you can use a female to female jumper cable to connect them, or you can simply solder a wire from pin to pin.
 
 <img
   src={useBaseUrl(
@@ -75,8 +75,8 @@ In order to use the RFM95 radio module onboard the Feather M0 for LoRaWAN we'll 
 
 ### Wiring the DHT22 Sensor
 
-Connect the signal pin 2 of the DHT22 sensor to pin 12 on the feather board. You will also need to 
-add a pull up resister (20-50k) between the signal pin 2 of the DHT22 sensor and the 3.3V supply.
+Connect the signal pin `2` of the DHT22 sensor to pin `12` on the feather board. You will also need to 
+add a pull up resister (20-50k) between the signal pin `2` of the DHT22 sensor and the 3.3V supply.
 Last, connect the power(3.3V or 5V) and ground pins. Please reference the breadboard diagram above.
 
 ## Software Setup
